--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,9 @@
     <div fxLayout="row" fxLayoutAlign="space-between end">
         <img src="assets/Images/pwc.png">
         <h3>CIT Compliance Platform</h3>
-        <app-homepage></app-homepage>
+        <div>
+            <app-homepage></app-homepage>
+        </div>
     </div>
 
 </header>
