--- a/src/app/administrator/client-master/client-master.component.html
+++ b/src/app/administrator/client-master/client-master.component.html
@@ -27,11 +27,11 @@
         </div>
         <div class="p-field">
             <label for="description">Permenant Account Number(PAN)</label>
-            <input type="text" pInputText id="PAN" pInputText pattern="[A-Z]{5}[0-9]{4}[A-Z]{1}" [(ngModel)]="client.PAN" required autofocus/>
+            <input type="text" pInputText id="PAN" pInputText pattern="[A-Z]{5}[0-9]{4}[A-Z]{1}" [(ngModel)]="client.pan" required autofocus/>
         </div>
         <div class="p-field">
             <label for="description">TAX collection Account Number(TAN)</label>
-            <input type="text" pInputText id="TAN" pInputText pattern="[A-Z]{5}[0-9]{4}[A-Z]{1}" [(ngModel)]="client.TAN" required autofocus/>
+            <input type="text" pInputText id="TAN" pInputText pattern="[A-Z]{5}[0-9]{4}[A-Z]{1}" [(ngModel)]="client.tan" required autofocus/>
         </div>
         <div class="p-field">
             <label for="name">Group Company</label>
@@ -40,8 +40,8 @@
         </div>
         <div class="p-field">
             <label for="name">Precision ID</label>
-            <input type="text" pInputText id="precision ID" pattern="[a-zA-Z 0-9]{2,10}" [(ngModel)]="client.PrecisionId" required autofocus />
-            <small class="p-invalid" style="color: red;" *ngIf="submitted && !client.PrecisionId">Precision ID is required.</small>
+            <input type="text" pInputText id="precision ID" pattern="[a-zA-Z 0-9]{2,10}" [(ngModel)]="client.precisionId" required autofocus />
+            <small class="p-invalid" style="color: red;" *ngIf="submitted && !client.precisionId">Precision ID is required.</small>
         </div>
 
         <div class="p-field">
@@ -126,26 +126,19 @@
                 </td>
                 <td>{{client1.id}}</td>
                 <td>{{client1.companyName}}</td>
-                <td>{{client1.PAN}}</td>
-                <td>{{client1.TAN}}</td>
+                <td>{{client1.pan}}</td>
+                <td>{{client1.tan}}</td>
                 <td>{{client1.groupCompany}}</td>
-                <td>{{client1.PrecisionId}}</td>
+                <td>{{client1.precisionId}}</td>
                 <td>{{client1.approver}}</td>
-                <td>{{client1.createdBy}}</td>
-                <td>{{client1.createdOn | date:'EEE, dd-MMM yyyy'}}</td>
-                <!-- <td>
-          <p-tableCheckbox [value]="true"></p-tableCheckbox>
-        </td> -->
+                <td>{{client1.createdAt| date:'EEE, dd-MMM yyyy'}}</td>
+                <td>{{client1.updatedAt | date:'EEE, dd-MMM yyyy'}}</td>
+
+                <td></td>
                 <td>
-                    <!-- <span>[class]="'product-badge status-' + product.inventoryStatus.toLowerCase()">{{product.inventoryStatus}}</span> -->
+                    <p-button pButton pRipple icon="pi pi-pencil" (click)="editClient(client1)" class="p-button-rounded p-button-success p-mr-2"></p-button>
                 </td>
                 <td>
-                    <p-button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success p-mr-2" (click)="editClient(client1)"></p-button>
-                </td>
-                <td>
-
-
-
                     <p-toggleButton [(ngModel)]="client1.status" onIcon="pi pi-check" offIcon="pi pi-times" (click)="changeStatus(client1)" [style]="{'width': '5em'}"></p-toggleButton>
                 </td>
             </tr>
